--- a/graphics.css
+++ b/graphics.css
@@ -2,7 +2,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 .main-container{
-    width: 100%;
+  width: 100%;
 }
 .flex-container{
     width: 100%;
@@ -22,4 +22,8 @@ body{
 .item:hover{
     background-color: white;
     color: black;
+}
+.buy{
+    text-align: justify;
+    font-size: 2em;
 }
