--- a/styleregi.css
+++ b/styleregi.css
@@ -9,6 +9,7 @@
     font-weight: normal;
     margin: .67em 0;
     display: block;
+    color: black;
   }
   
   #registered {
@@ -36,7 +37,7 @@
   
   .module{
     position:relative;
-    top:10%;    
+    top:18%;    
     height:65%;
     width:450px;
     margin-left:auto;
@@ -84,7 +85,8 @@
     color: #fff;
     background-color:#f0f0f0;
     font-family:helvetica;
-    background:url('http://clevertechie.com/img/bnet-bg.jpg') #0f2439 no-repeat center top;
+    background:url('http://localhost/registration.jpg') #87CEFA no-repeat top  ;
+    
   }
   
   .body-content{
@@ -248,7 +250,7 @@
     text-shadow: none;
     position: relative;
     background-color: #272e3b;
-    color: rgba(255, 255, 255, 0.7);
+    color:black;
     border: 1px solid #000;
     box-shadow: 0 0 0 1px #363d49 inset, 0 5px 10px rgba(0, 0, 0, 0.75);
   }
@@ -265,3 +267,4 @@
     background-color: #15360e;
     box-shadow: 0 0 0 1px #2a551e inset, 0 5px 10px rgba(0, 0, 0, 0.75);
   }
+  
